Changed the Base64 calls from javax.xml.bind.DateTypeConverter to java.util.Base64, and the date parsing to VERSCommon.VERSDate as DateTypeConverter is no longer included in latest Java release